--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -529,7 +529,7 @@ input[type="radio"]
     opacity: .8
 
 // substitute PNG on pie charts if rotation cannot be done
-.no-csstransforms3d
+.no-csstransforms3d, .no-inlinesvg
   .percent_50, .percent_92, .percent_68, .percent_59, .percent_57
     svg
       display: none
