--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -413,7 +413,7 @@ section
       font-weight: normal
 
 
-input[type="radio"]
+input[type=radio]
   -webkit-appearance: none
   -moz-appearance: none
   display: inline-block
