--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -108,16 +108,10 @@ header.story_header
     z-index: 3
 
   p
+    background: image-url('pbs-logo.png') top no-repeat
     font-family: 'Bodoni MT W01'
     margin-bottom: $line*1.25
-
-    &:before,
-    &:after
-      color: $green
-      content: "★"
-      font-size: $font-size*.6
-      padding: 0 $line/4
-      vertical-align: $line*.2
+    padding-top: 55px
 
   hr
     display: none
