--- a/css/style.css
+++ b/css/style.css
@@ -732,7 +732,7 @@ header.site_header {
     max-width: 1000px; }
   /* line 29, sass/_header.sass */
   header.site_header a.pbs {
-    background: url('../img/pbs-light_background.svg') no-repeat left top;
+    background: url('../img/pbs-logo-dark.png?1370293618') no-repeat left top;
     background-size: contain;
     margin: 0.2em 1em 0 0;
     width: 38px;
@@ -826,28 +826,33 @@ header.story_header {
     z-index: 3; }
   /* line 110, sass/_header.sass */
   header.story_header p {
-    background: url('../img/pbs-logo.png?1370293618') top no-repeat;
-    font-family: "Bodoni MT W01";
+    background: url('../img/pbs-logo-dark.png?1370293618') top no-repeat;
+    color: white;
     margin-bottom: 30px;
     padding-top: 55px; }
-  /* line 116, sass/_header.sass */
+    /* line 116, sass/_header.sass */
+    header.story_header p span {
+      font-family: "Proxima N W01 Bold";
+      padding: 0.25em 0.5em;
+      text-shadow: black 0 0 10px; }
+  /* line 121, sass/_header.sass */
   header.story_header hr {
     display: none; }
-  /* line 119, sass/_header.sass */
+  /* line 124, sass/_header.sass */
   header.story_header h1 {
     text-shadow: #383838 0 0 25px;
     color: white;
     font-size: 57.6px;
     margin: 4em 0 6px;
     word-spacing: -12px; }
-    /* line 126, sass/_header.sass */
+    /* line 131, sass/_header.sass */
     header.story_header h1 em {
       font-family: "BodoniW01-PosterItalic", serif;
       font-size: 104px;
       font-style: normal;
       margin: 0;
       padding: 0 3px; }
-    /* line 133, sass/_header.sass */
+    /* line 138, sass/_header.sass */
     header.story_header h1 small {
       font-family: "Adobe Caslon W01 Bd It", serif;
       font-size: 36.8px;
@@ -855,13 +860,13 @@ header.story_header {
       padding: 0 2.4px;
       text-transform: lowercase;
       vertical-align: 8px; }
-  /* line 142, sass/_header.sass */
+  /* line 147, sass/_header.sass */
   header.story_header.bordered hr, .chapter-4-working-in-retirement article header.story_header.they_want_to hr, .chapter-4-working-in-retirement article header.story_header.couldnt_be_happier hr {
     display: block; }
-  /* line 145, sass/_header.sass */
+  /* line 150, sass/_header.sass */
   header.story_header.bordered h1, .chapter-4-working-in-retirement article header.story_header.they_want_to h1, .chapter-4-working-in-retirement article header.story_header.couldnt_be_happier h1 {
     margin-top: -43.2px; }
-    /* line 148, sass/_header.sass */
+    /* line 153, sass/_header.sass */
     header.story_header.bordered h1 em, .chapter-4-working-in-retirement article header.story_header.they_want_to h1 em, .chapter-4-working-in-retirement article header.story_header.couldnt_be_happier h1 em {
       background: white; }
 
